--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
   },
   "homepage": "https://github.com/bottega-code-school/js-builder",
   "dependencies": {
+    "@babel/plugin-syntax-import-meta": "^7.10.4",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "ajv": "6.12.0",
     "autoprefixer": "^9.1.0",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^7.2.3",
@@ -48,6 +51,8 @@
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
     "date-fns": "^3.6.0",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "eslint": "^4.2.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-react": "^7.1.0",
@@ -55,16 +60,21 @@
     "extract-loader": "^2.0.1",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
+    "html-to-draftjs": "^1.5.0",
     "html-webpack-plugin": "^3.2.0",
     "moment": "^2.30.1",
     "postcss-loader": "^2.1.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-dropzone-component": "^3.2.0",
+    "react-html-parser": "^2.0.2",
     "react-redux": "7.2.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "^5.0.1",
     "redux": "4.0.5",
+    "rich-text-editor": "^7.2.3",
     "sass": "^1.75.0",
     "sass-loader": "^7.3.1",
     "style-loader": "^0.21.0",
