--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-router",
+  "name": "Maintanence Tracker",
   "version": "1.0.0",
-  "description": "Basic skeleton codebase for React/Router applications.",
+  "description": "general maintanence tracking.",
   "scripts": {
     "preinstall": "npm set audit false",
     "start": "webpack-dev-server --config webpack/dev.config.js --watch --openssl-legacy-provider",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:bottega-code-school/js-builder.git"
+    "url": ""
   },
   "keywords": [
     "es6",
@@ -25,15 +25,16 @@
     "sass",
     "css module"
   ],
-  "author": "Your Name Here",
+  "author": "Chris Welfley",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/bottega-code-school/js-builder/issues"
+    "url": ""
   },
-  "homepage": "https://github.com/bottega-code-school/js-builder",
+  "homepage": "",
   "dependencies": {
     "@babel/plugin-syntax-import-meta": "^7.10.4",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "ajv": "6.12.0",
     "autoprefixer": "^9.1.0",
@@ -59,6 +60,7 @@
     "express": "4.17.1",
     "extract-loader": "^2.0.1",
     "file-loader": "^1.1.11",
+    "flask-cors": "^0.0.1",
     "html-loader": "^0.5.5",
     "html-to-draftjs": "^1.5.0",
     "html-webpack-plugin": "^3.2.0",
@@ -69,14 +71,17 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone-component": "^3.2.0",
     "react-html-parser": "^2.0.2",
+    "react-modal": "^3.16.1",
     "react-redux": "7.2.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "^5.0.1",
+    "react-truncate": "^2.4.0",
     "redux": "4.0.5",
     "rich-text-editor": "^7.2.3",
     "sass": "^1.75.0",
     "sass-loader": "^7.3.1",
+    "striptags": "^3.2.0",
     "style-loader": "^0.21.0",
     "webpack": "4.42.1",
     "webpack-cli": "3.3.11",
