--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
     "cors": "^2.8.5",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
-    "date-fns": "^3.6.0",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "eslint": "^4.2.0",
@@ -65,6 +64,7 @@
     "html-loader": "^0.5.5",
     "html-to-draftjs": "^1.5.0",
     "html-webpack-plugin": "^3.2.0",
+    "luxon": "^3.4.4",
     "moment": "^2.30.1",
     "postcss-loader": "^2.1.6",
     "react": "16.13.1",
