--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "html-loader": "^0.5.5",
     "html-to-draftjs": "^1.5.0",
     "html-webpack-plugin": "^3.2.0",
+    "lodash": "^4.17.21",
     "luxon": "^3.4.4",
     "moment": "^2.30.1",
     "postcss-loader": "^2.1.6",
