--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react-scripts": "^5.0.1",
     "react-truncate": "^2.4.0",
     "redux": "4.0.5",
+    "regenerator-runtime": "^0.14.1",
     "rich-text-editor": "^7.2.3",
     "sass": "^1.75.0",
     "sass-loader": "^7.3.1",
