--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "luxon": "^3.4.4",
     "moment": "^2.30.1",
     "postcss-loader": "^2.1.6",
+    "qrcode.react": "^3.1.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-draft-wysiwyg": "^1.15.0",
