--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "lodash": "^4.17.21",
     "luxon": "^3.4.4",
     "moment": "^2.30.1",
+    "ngrok": "^5.0.0-beta.2",
     "postcss-loader": "^2.1.6",
     "qrcode.react": "^3.1.0",
     "react": "16.13.1",
@@ -75,6 +76,7 @@
     "react-dropzone-component": "^3.2.0",
     "react-html-parser": "^2.0.2",
     "react-modal": "^3.16.1",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-redux": "7.2.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
