--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "preinstall": "npm set audit false",
     "start": "webpack-dev-server --config webpack/dev.config.js --watch --openssl-legacy-provider",
     "build": "cross-env NODE_ENV=production webpack --config webpack/prod.config.js --progress --display-error-details --color",
-    "heroku-postbuild": "npm run build",
     "precommit": "eslint src",
-    "prod": "NODE_ENV=production node server.js"
+    "predeploy": "npm run build",
+    "prod": "NODE_ENV=production node server.js",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -30,7 +31,7 @@
   "bugs": {
     "url": ""
   },
-  "homepage": "",
+  "homepage": "https//secrec1.github.io/Frontend/",
   "dependencies": {
     "@babel/plugin-syntax-import-meta": "^7.10.4",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
@@ -79,7 +80,7 @@
     "react-qr-reader": "^3.0.0-beta-1",
     "react-redux": "7.2.0",
     "react-router": "5.1.2",
-    "react-router-dom": "5.1.2",
+    "react-router-dom": "6.25.1",
     "react-scripts": "^5.0.1",
     "react-truncate": "^2.4.0",
     "redux": "4.0.5",
@@ -87,8 +88,10 @@
     "rich-text-editor": "^7.2.3",
     "sass": "^1.75.0",
     "sass-loader": "^7.3.1",
+    "set-value": "^4.1.0",
     "striptags": "^3.2.0",
     "style-loader": "^0.21.0",
+    "update": "^0.7.4",
     "webpack": "4.42.1",
     "webpack-cli": "3.3.11",
     "webpack-dev-middleware": "3.7.2",
@@ -102,6 +105,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "gh-pages": "^6.1.1",
     "uglifyjs-webpack-plugin": "^1.2.7"
   }
 }
