--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "react-qr-reader": "^3.0.0-beta-1",
     "react-redux": "7.2.0",
     "react-router": "5.1.2",
-    "react-router-dom": "6.25.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^5.0.1",
     "react-truncate": "^2.4.0",
     "redux": "4.0.5",
