--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": " https://secrec1.github.io/Frontend/",
   "name": "Maintanence Tracker",
   "version": "1.0.0",
   "description": "general maintanence tracking.",
@@ -8,8 +9,8 @@
     "build": "cross-env NODE_ENV=production webpack --config webpack/prod.config.js --progress --display-error-details --color",
     "precommit": "eslint src",
     "predeploy": "npm run build",
-    "prod": "NODE_ENV=production node server.js",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "prod": "NODE_ENV=production node server.js"
   },
   "repository": {
     "type": "git",
@@ -31,7 +32,6 @@
   "bugs": {
     "url": ""
   },
-  "homepage": "https//secrec1.github.io/Frontend/",
   "dependencies": {
     "@babel/plugin-syntax-import-meta": "^7.10.4",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
