--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "cross-env NODE_ENV=production webpack --config webpack/prod.config.js --progress --display-error-details --color",
     "precommit": "eslint src",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "prod": "NODE_ENV=production node server.js"
   },
   "repository": {
