--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": " https://secrec1.github.io/Frontend/",
+  "homepage": " https://192.168.1.231/Frontend/",
   "name": "Maintanence Tracker",
   "version": "1.0.0",
   "description": "general maintanence tracking.",
