--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "preinstall": "npm set audit false",
     "start": "webpack-dev-server --config webpack/dev.config.js --watch --openssl-legacy-provider",
-    "build": "cross-env NODE_ENV=production webpack --config webpack/prod.config.js --progress --display-error-details --color",
+    "build": " NODE_ENV=production webpack --config webpack/prod.config.js --progress --display-error-details --color",
     "precommit": "eslint src",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
