--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "description": "general maintanence tracking.",
   "engines": {
-    "node": "16.x"
+    "node": "18.x"
   },
   "scripts": {
     "preinstall": "npm set audit false",
@@ -97,7 +97,6 @@
     "update": "^0.7.4",
     "webpack": "4.42.1",
     "webpack-cli": "3.3.11",
-    "webpack-dev-middleware": "3.7.2",
     "webpack-dev-server": "3.10.3",
     "webpack-hot-middleware": "2.25.0",
     "webpack-merge": "4.2.2"
@@ -110,6 +109,7 @@
     "cross-env": "^7.0.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "gh-pages": "^6.1.1",
-    "uglifyjs-webpack-plugin": "^1.2.7"
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "webpack-dev-middleware": "^7.3.0"
   }
 }
