--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "preinstall": "npm set audit false",
     "start": "webpack-dev-server --config webpack/dev.config.js --watch --openssl-legacy-provider",
-    "build": " NODE_ENV=production webpack --config webpack/prod.config.js --progress --display-error-details --color",
+    "build": "cross-env NODE_ENV=production webpack --config webpack/prod.config.js --progress  --color",
     "precommit": "eslint src",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
@@ -95,8 +95,6 @@
     "striptags": "^3.2.0",
     "style-loader": "^0.21.0",
     "update": "^0.7.4",
-    "webpack": "4.42.1",
-    "webpack-cli": "3.3.11",
     "webpack-dev-server": "3.10.3",
     "webpack-hot-middleware": "2.25.0",
     "webpack-merge": "4.2.2"
@@ -110,6 +108,8 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "gh-pages": "^6.1.1",
     "uglifyjs-webpack-plugin": "^1.2.7",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4",
     "webpack-dev-middleware": "^7.3.0"
   }
 }
