--- a/package.json
+++ b/package.json
@@ -37,39 +37,38 @@
   },
   "dependencies": {
     "@babel/plugin-syntax-import-meta": "^7.10.4",
+    "@eslint-community/eslint-utils": "^4.4.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
+    "@typescript-eslint/utils": "^8.0.0",
     "ajv": "6.12.0",
     "autoprefixer": "^9.1.0",
     "axios": "^0.21.4",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.5",
     "babel-plugin-async-to-promises": "^1.0.5",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "clean-webpack-plugin": "^0.1.16",
-    "copy-webpack-plugin": "^4.5.2",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
-    "css-loader": "^1.0.1",
+    "css-loader": "^7.1.2",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
-    "eslint": "^4.2.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-react": "^7.1.0",
     "express": "4.17.1",
     "extract-loader": "^2.0.1",
-    "file-loader": "^1.1.11",
     "flask-cors": "^0.0.1",
     "html-loader": "^0.5.5",
     "html-to-draftjs": "^1.5.0",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^5.6.0",
     "lodash": "^4.17.21",
     "luxon": "^3.4.4",
+    "mini-css-extract-plugin": "^2.9.0",
     "moment": "^2.30.1",
     "ngrok": "^5.0.0-beta.2",
     "postcss-loader": "^2.1.6",
@@ -90,7 +89,7 @@
     "regenerator-runtime": "^0.14.1",
     "rich-text-editor": "^7.2.3",
     "sass": "^1.75.0",
-    "sass-loader": "^7.3.1",
+    "sass-loader": "^16.0.0",
     "set-value": "^4.1.0",
     "striptags": "^3.2.0",
     "style-loader": "^0.21.0",
@@ -100,14 +99,24 @@
     "webpack-merge": "4.2.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/preset-react": "^7.24.7",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "babel-loader": "^9.1.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^12.0.2",
     "cross-env": "^7.0.3",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "eslint": "^9.8.0",
+    "file-loader": "^6.2.0",
     "gh-pages": "^6.1.1",
-    "uglifyjs-webpack-plugin": "^1.2.7",
+    "terser-webpack-plugin": "^5.3.10",
+    "url-loader": "^4.1.1",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-middleware": "^7.3.0"
