--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "css-loader": "^7.1.2",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
-    "eslint-loader": "^1.9.0",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-react": "^7.1.0",
     "express": "4.17.1",
     "extract-loader": "^2.0.1",
@@ -94,6 +94,7 @@
     "striptags": "^3.2.0",
     "style-loader": "^0.21.0",
     "update": "^0.7.4",
+    "uuid": "^10.0.0",
     "webpack-dev-server": "3.10.3",
     "webpack-hot-middleware": "2.25.0",
     "webpack-merge": "4.2.2"
