--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   },
   "scripts": {
     "preinstall": "npm set audit false",
-    "start": "webpack-dev-server --config webpack/dev.config.js --watch --openssl-legacy-provider",
+    "start": "webpack-dev-server --config webpack/dev.config.js ",
     "build": "cross-env NODE_ENV=production webpack --config webpack/prod.config.js --progress  --color",
     "precommit": "eslint src",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "prod": "cross-env NODE_ENV=production node server.js"
+    "production": "cross-env NODE_ENV=production node server.js"
   },
   "repository": {
     "type": "git",
@@ -74,23 +74,21 @@
     "ngrok": "^5.0.0-beta.2",
     "postcss-loader": "^2.1.6",
     "qrcode.react": "^3.1.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone-component": "^3.2.0",
     "react-html-parser": "^2.0.2",
     "react-modal": "^3.16.1",
     "react-qr-reader": "^3.0.0-beta-1",
-    "react-redux": "7.2.0",
-    "react-router": "5.1.2",
-    "react-router-dom": "^5.1.2",
+    "react-redux": "^9.1.2",
+    "react-router": "^6.26.0",
+    "react-router-dom": "^6.26.0",
     "react-scripts": "^5.0.1",
     "react-truncate": "^2.4.0",
     "redux": "4.0.5",
     "regenerator-runtime": "^0.14.1",
     "rich-text-editor": "^7.2.3",
-    "sass": "^1.75.0",
-    "sass-loader": "^16.0.0",
     "set-value": "^4.1.0",
     "striptags": "^3.2.0",
     "style-loader": "^0.21.0",
@@ -117,6 +115,8 @@
     "eslint": "^9.8.0",
     "file-loader": "^6.2.0",
     "gh-pages": "^6.1.1",
+    "sass": "^1.77.8",
+    "sass-loader": "^16.0.0",
     "terser-webpack-plugin": "^5.3.10",
     "url-loader": "^4.1.1",
     "webpack": "^5.93.0",
