npm start works

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "extract-loader": "^2.0.1",
     "flask-cors": "^0.0.1",
     "html-loader": "^0.5.5",
+    "html-react-parser": "^5.1.12",
     "html-to-draftjs": "^1.5.0",
     "html-webpack-plugin": "^5.6.0",
     "lodash": "^4.17.21",
@@ -78,7 +79,7 @@
     "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone-component": "^3.2.0",
-    "react-html-parser": "^2.0.2",
+    "html-react-parser": "^2.0.2",
     "react-modal": "^3.16.1",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-redux": "^9.1.2",
