--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "preinstall": "npm set audit false",
     "start": "webpack-dev-server --config webpack/dev.config.js ",
-    "build": " NODE_ENV=production webpack --config webpack/prod.config.js --progress  --color",
+    "build": " NODE_ENV=production webpack --config webpack/prod.config.js --progress  --color --legacy-peer-deps",
     "precommit": "eslint src",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
