--- a/package.json
+++ b/package.json
@@ -44,12 +44,12 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
     "@typescript-eslint/utils": "^8.0.0",
-    "ajv": "6.12.0",
-    "autoprefixer": "^9.1.0",
-    "axios": "^0.21.4",
+    "ajv": "^8.17.1",
+    "autoprefixer": "^10.4.20",
+    "axios": "^1.7.3",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^7.2.3",
+    "babel-eslint": "^10.1.0",
     "babel-plugin-async-to-promises": "^1.0.5",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
@@ -61,10 +61,10 @@
     "draftjs-to-html": "^0.9.1",
     "eslint-plugin-react": "^7.1.0",
     "eslint-webpack-plugin": "^4.2.0",
-    "express": "4.17.1",
-    "extract-loader": "^2.0.1",
+    "express": "^4.19.2",
+    "extract-loader": "^5.1.0",
     "flask-cors": "^0.0.1",
-    "html-loader": "^0.5.5",
+    "html-loader": "^5.1.0",
     "html-react-parser": "^2.0.2",
     "html-to-draftjs": "^1.5.0",
     "html-webpack-plugin": "^5.6.0",
@@ -73,7 +73,7 @@
     "mini-css-extract-plugin": "^2.9.0",
     "moment": "^2.30.1",
     "ngrok": "^5.0.0-beta.2",
-    "postcss-loader": "^2.1.6",
+    "postcss-loader": "^8.1.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -86,24 +86,24 @@
     "react-router-dom": "^6.26.0",
     "react-scripts": "^5.0.1",
     "react-truncate": "^2.4.0",
-    "redux": "4.0.5",
+    "redux": "^5.0.1",
     "regenerator-runtime": "^0.14.1",
     "rich-text-editor": "^7.2.3",
     "set-value": "^4.1.0",
     "striptags": "^3.2.0",
-    "style-loader": "^0.21.0",
+    "style-loader": "^4.0.0",
     "update": "^0.7.4",
     "uuid": "^10.0.0",
     "webpack-dev-server": "^5.0.4",
-    "webpack-hot-middleware": "2.25.0",
-    "webpack-merge": "4.2.2"
+    "webpack-hot-middleware": "^2.26.1",
+    "webpack-merge": "^6.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/preset-react": "^7.24.7",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.1",
+    "@typescript-eslint/parser": "^8.0.1",
     "babel-loader": "^9.1.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
