--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "extract-loader": "^5.1.0",
     "flask-cors": "^0.0.1",
     "html-loader": "^5.1.0",
-    "html-react-parser": "^2.0.2",
+    "html-react-parser": "^5.1.12",
     "html-to-draftjs": "^1.5.0",
     "html-webpack-plugin": "^5.6.0",
     "lodash": "^4.17.21",
@@ -80,12 +80,13 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone-component": "^3.2.0",
     "react-modal": "^3.16.1",
-    "react-qr-reader": "^3.0.0-beta-1",
+    "react-qr-code": "^2.0.15",
+    "react-qr-scanner": "^1.0.0-alpha.11",
+    "react-qrcode-scanner": "^1.2.4",
     "react-redux": "^9.1.2",
     "react-router": "^6.26.0",
     "react-router-dom": "^6.26.0",
     "react-scripts": "^5.0.1",
-    "react-truncate": "^2.4.0",
     "redux": "^5.0.1",
     "regenerator-runtime": "^0.14.1",
     "rich-text-editor": "^7.2.3",
