--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "precommit": "eslint src",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "production": "cross-env NODE_ENV=production node server.js"
+    "production": "NODE_ENV=production node server.js"
   },
   "repository": {
     "type": "git",
