--- a/package.json
+++ b/package.json
@@ -54,9 +54,11 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "braces": "^3.0.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
+    "defaults-deep": "^0.2.4",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "eslint-plugin-react": "^7.1.0",
@@ -81,7 +83,6 @@
     "react-dropzone-component": "^3.2.0",
     "react-modal": "^3.16.1",
     "react-qr-code": "^2.0.15",
-    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-qrcode-scanner": "^1.2.4",
     "react-redux": "^9.1.2",
     "react-router": "^6.26.0",
@@ -94,16 +95,19 @@
     "set-value": "^4.1.0",
     "striptags": "^3.2.0",
     "style-loader": "^4.0.0",
+    "tough-cookie": "^4.1.4",
     "update": "^0.7.4",
     "uuid": "^10.0.0",
     "webpack-dev-server": "^5.0.4",
     "webpack-hot-middleware": "^2.26.1",
-    "webpack-merge": "^6.0.1"
+    "webpack-merge": "^6.0.1",
+    "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/preset-react": "^7.24.7",
+    "@babel/traverse": "^7.25.3",
     "@typescript-eslint/eslint-plugin": "^8.0.1",
     "@typescript-eslint/parser": "^8.0.1",
     "babel-loader": "^9.1.3",
@@ -122,6 +126,7 @@
     "terser-webpack-plugin": "^5.3.10",
     "url-loader": "^4.1.1",
     "webpack": "^5.93.0",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-middleware": "^7.3.0"
   }
