--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "luxon": "^3.4.4",
     "mini-css-extract-plugin": "^2.9.0",
     "moment": "^2.30.1",
+    "mysql": "^2.18.1",
     "ngrok": "^5.0.0-beta.2",
     "postcss-loader": "^8.1.1",
     "qrcode.react": "^3.1.0",
@@ -117,7 +118,6 @@
     "babel-register": "^6.26.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^12.0.2",
-    
     "eslint": "^9.8.0",
     "file-loader": "^6.2.0",
     "gh-pages": "^6.1.1",
